--- a/Frontend-preview/student-d-app/package.json
+++ b/Frontend-preview/student-d-app/package.json
@@ -15,7 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.0.17"
+    "tailwindcss": "^4.0.17",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
